Implement middle section; both html and css

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 <!--Photo by Pixabay: https://www.pexels.com/photo/astronaut-graffiti-on-semi-trailers-163811/ -astronaut image-->
+<!--Image by <a href="https://pixabay.com/users/geralt-9301/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2643089">Gerd Altmann</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=2643089">Pixabay</a>-->
+<!--Image by <a href="https://pixabay.com/users/wikiimages-1897/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=74005">WikiImages</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=74005">Pixabay</a>-->
+<!--Image by <a href="https://pixabay.com/users/charlvera-11040068/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5923806">Chil Vera</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=5923806">Pixabay</a>-->
+<!--Image by <a href="https://pixabay.com/users/geralt-9301/?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7249785">Gerd Altmann</a> from <a href="https://pixabay.com//?utm_source=link-attribution&utm_medium=referral&utm_campaign=image&utm_content=7249785">Pixabay</a>-->
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -26,8 +31,29 @@
                 <p>Now this is a subtext, that goes under the main title. The font here is smaller, and the color is a little bit dimmer.</p>
                 <button>Sign up</button>
             </div>
-    
             <img src="images/astro.jpg" alt="This is an image">
+        </div>
+    </div>
+
+    <div class="middle-part">
+        <p class="information-header">Some random information.</p>
+        <div class="content">
+            <div class="img-and-text">
+                <img src="images/space-1.jpg" alt="image 1">
+                <p class="img-subtext">this is some subtext under an image</p>
+            </div>
+            <div class="img-and-text">
+                <img src="images/space-2.jpg" alt="image 2">
+                <p class="img-subtext">this is some subtext under an image</p>
+            </div>
+            <div class="img-and-text">
+                <img src="images/space-3.jpg" alt="image 3">
+                <p class="img-subtext">this is some subtext under an image</p>
+            </div>
+            <div class="img-and-text">
+                <img src="images/space-4.jpg" alt="image 4">
+                <p class="img-subtext">this is some subtext under an image</p>
+            </div>
         </div>
 
     </div>
