Implement quote section, inc html and css

--- a/index.html
+++ b/index.html
@@ -55,7 +55,13 @@
                 <p class="img-subtext">this is some subtext under an image</p>
             </div>
         </div>
+    </div>
 
+    <div class="quote-part">
+        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe 
+            people will actually read it. Who knows? All I know is this looks really good.
+        </p>
+        <p class="author">-Random Person</p>
     </div>
 </body>
 
