--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
         </p>
         <p class="author">-Random Person</p>
     </div>
+
+    <div class="action">
+        <div class="overlay">
+            <div class="text">
+                <p class="call">Call to action! It's time!</p>
+                <p class="subtext">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button>Sign up</button>
+        </div>
+    </div>
 </body>
 
 </html>
