--- a/index.html
+++ b/index.html
@@ -73,6 +73,10 @@
             <button>Sign up</button>
         </div>
     </div>
+
+    <footer>
+        <p>Copyright @ The Odin Project 2021 [this is a dummy text]</p>
+    </footer>
 </body>
 
 </html>
