--- a/index.html
+++ b/index.html
@@ -17,65 +17,69 @@
 <body>
     <div class="upper-most">
         <header>
-            <p class="logo">Header Logo</p>
+            <p class="logo">Logo Holder</p>
             <ul>
-                <li> <a href="">header link one</a></li>
-                <li> <a href="">header link two</a></li>
-                <li> <a href="">header link three</a></li>
+                <li> <a href="">link one holder</a></li>
+                <li> <a href="">link two holder</a></li>
+                <li> <a href="">link three holder</a></li>
             </ul>
         </header>
 
         <div class="upper-most-content">
             <div class="left-content">
-                <p class="title">This website, is awesome.</p>
-                <p>Now this is a subtext, that goes under the main title. The font here is smaller, and the color is a little bit dimmer.</p>
-                <button>Sign up</button>
+                <p class="title">Welcome to my Landing Page!</p>
+                <p>This page was created as a practice project assigned by The Odin Project. You'll find random html and css implementations here.
+                    Have a look!
+                </p>
+                <button>I'm a Button</button>
             </div>
             <img src="images/astro.jpg" alt="This is an image">
         </div>
     </div>
 
     <div class="middle-part">
-        <p class="information-header">Some random information.</p>
+        <p class="information-header">Have a look at some random space pictures.</p>
         <div class="content">
             <div class="img-and-text">
                 <img src="images/space-1.jpg" alt="image 1">
-                <p class="img-subtext">this is some subtext under an image</p>
+                <p class="img-subtext">the green hue looks wonderful, doesn't it?</p>
             </div>
             <div class="img-and-text">
                 <img src="images/space-2.jpg" alt="image 2">
-                <p class="img-subtext">this is some subtext under an image</p>
+                <p class="img-subtext">this kinda resembles a marble texture</p>
             </div>
             <div class="img-and-text">
                 <img src="images/space-3.jpg" alt="image 3">
-                <p class="img-subtext">this is some subtext under an image</p>
+                <p class="img-subtext">what if this was our Earth? would be pretty boring</p>
             </div>
             <div class="img-and-text">
                 <img src="images/space-4.jpg" alt="image 4">
-                <p class="img-subtext">this is some subtext under an image</p>
+                <p class="img-subtext">stars, blacks, and blues - this is how I imagine space</p>
             </div>
         </div>
     </div>
 
     <div class="quote-part">
-        <p class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe 
-            people will actually read it. Who knows? All I know is this looks really good.
+        <p class="quote">Time travel used to be thought of as just science fiction, 
+            but Einstein's general theory of relativity allows for the possibility that 
+            we could warp space-time so much that you could go off in a rocket and return 
+            before you set out.
         </p>
-        <p class="author">-Random Person</p>
+        <p class="author">-Stephen Hawking</p>
     </div>
 
     <div class="action">
         <div class="overlay">
             <div class="text">
-                <p class="call">Call to action! It's time!</p>
-                <p class="subtext">Sign up for our product by clicking that button right over there!</p>
+                <p class="call">Oh look! another button</p>
+                <p class="subtext">Disclaimer: Clicking this button will actually do nothing.</p>
             </div>
-            <button>Sign up</button>
+            <button>Click Me</button>
         </div>
     </div>
 
     <footer>
-        <p>Copyright @ The Odin Project 2021 [this is a dummy text]</p>
+        <p>This is a footer. Texts such as copyrights go here.</p>
     </footer>
 </body>
 
